syntax = "proto3";

package ea;

import "google/protobuf/timestamp.proto";

service AddressService {
    rpc ListAddresses (ListAddressesRequest) returns (ListAddressesResponse);
    rpc GetAddress (GetAddressRequest) returns (GetAddressResponse);
    rpc CreateAddress (CreateAddressRequest) returns (CreateAddressResponse);
    rpc DeleteAddress (DeleteAddressRequest) returns (DeleteAddressResponse);
    rpc UpdateAddress (UpdateAddressRequest) returns (UpdateAddressResponse);
}

message Address {
    string id = 1;
    string address_1 = 2;
    string address_2 = 3;
    string city = 4;
    string state = 5;
    string country_id = 6;
    string postal_code = 7;
    google.protobuf.Timestamp created_at = 11;
    google.protobuf.Timestamp updated_at = 12;
}

message ListAddressesRequest {
    int32 page_size = 2;
    string page_token = 3;
}

message ListAddressesResponse {
    bool success = 1;
    repeated Address addresses = 4;
    string next_page_token = 5;
    int64 total_size = 6;
}

message GetAddressRequest {
    string address_id = 1;
}

message GetAddressResponse {
    bool success = 1;
    oneof data {
        string message = 2;
        Address address = 4;
    }
}

message CreateAddressRequest {
    string request_id = 42;
    string address_1 = 2;
    string address_2 = 3;
    string city = 4;
    string state = 5;
    string country_id = 6;
    string postal_code = 7;
}

message CreateAddressResponse {
    bool success = 1;
    oneof data {
        string message = 2;
        Address address = 4;
    }
}

message DeleteAddressRequest {
    string request_id = 42;
    string address_id = 1;
}

message DeleteAddressResponse {
    bool success = 1;
    oneof data {
        string message = 2;
        Address address = 4;
    }
}

message UpdateAddressRequest {
    string request_id = 42;
    string address_id = 1;
    optional string address_1 = 2;
    optional string address_2 = 3;
    optional string city = 4;
    optional string state = 5;
    optional string country_id = 6;
    optional string postal_code = 7;
}

message UpdateAddressResponse {
    bool success = 1;
    oneof data {
        string message = 2;
        Address address = 4;
    }
}
