syntax = "proto3";

package ea;

import "google/protobuf/timestamp.proto";

service CountryService {
    rpc ListCountries (ListCountriesRequest) returns (ListCountriesResponse);
    rpc GetCountry (GetCountryRequest) returns (GetCountryResponse);
    rpc CreateCountry (CreateCountryRequest) returns (CreateCountryResponse);
    rpc DeleteCountry (DeleteCountryRequest) returns (DeleteCountryResponse);
    rpc UpdateCountry (UpdateCountryRequest) returns (UpdateCountryResponse);
}

message Country {
    string id = 1;
    string name = 2;
    string alpha2 = 3;
    string alpha3 = 4;
    string phone_code = 5;
    string currency_code = 6;
    google.protobuf.Timestamp created_at = 11;
    google.protobuf.Timestamp updated_at = 12;
}

message ListCountriesRequest {
    int32 page_size = 2;
    string page_token = 3;
}

message ListCountriesResponse {
    bool success = 1;
    repeated Country countries = 4;
    string next_page_token = 5;
    int64 total_size = 6;
}

message GetCountryRequest {
    string country_id = 1;
}

message GetCountryResponse {
    bool success = 1;
    oneof data {
        string message = 2;
        Country country = 4;
    }
}

message CreateCountryRequest {
    string request_id = 42;
    string name = 2;
    string alpha2 = 3;
    string alpha3 = 4;
    string phone_code = 5;
    string currency_code = 6;
}

message CreateCountryResponse {
    bool success = 1;
    oneof data {
        string message = 2;
        Country country = 4;
    }
}

message DeleteCountryRequest {
    string request_id = 42;
    string country_id = 1;
}

message DeleteCountryResponse {
    bool success = 1;
    oneof data {
        string message = 2;
        Country country = 4;
    }
}

message UpdateCountryRequest {
    string request_id = 42;
    string country_id = 1;
    optional string name = 2;
    optional string alpha2 = 3;
    optional string alpha3 = 4;
    optional string phone_code = 5;
    optional string currency_code = 6;
}

message UpdateCountryResponse {
    bool success = 1;
    oneof data {
        string message = 2;
        Country country = 4;
    }
}
